--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,13 @@
 name = "exitcode"
 version = "1.0.0"
 authors = ["Ben Wilber <benwilber@gmail.com>"]
+description = "Preferred system exit codes as defined by sysexits.h"
+documentation = "https://github.com/benwilber/exitcode"
+homepage = "https://github.com/benwilber/exitcode"
+repository = "https://github.com/benwilber/exitcode"
+readme = "README.md"
+keywords = ["sysexits", "exitcode"]
+categories = ["os", "command-line-interface"]
+license = "Apache License 2.0"
 
 [dependencies]
